<resources>
    <string name="app_name">Gallery test task</string>
    <string name="open_burger">open</string>
    <string name="close_burger">close</string>
    <string name="app_gallery">App gallery</string>
    <string name="gallery">Gallery</string>
    <string name="dear_user">Dear User.</string>
    <string name="dialog_text_description">To use this App storage permission is required, please click START and allow it.</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="start_dialog">Start</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery_">Gallery</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
</resources>